--- a/application/.gitignore
+++ b/application/.gitignore
@@ -97,7 +97,7 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
-.idea/
+../.idea/
 
 # Celery stuff
 celerybeat-schedule
