Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,5 @@ include:
     file: 'mirror-repo.gitlab-ci.yml'
   - project: 'sripas/gitlab-ci-templates'
     file: 'mirror-wiki.gitlab-ci.yml'
-
+  - project: 'sripas/gitlab-ci-templates'
+    file: 'publish-docs.gitlab-ci.yml'
