--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
   local_operations:
+    environment:
+      - USER_INDEX=1
     restart: always
     container_name: local_operations
     build: application
@@ -10,13 +12,18 @@ services:
       - "9050:9050"
     depends_on:
       - db
+    volumes:
+      - type: bind
+        source: \\wsl.localhost\Ubuntu20.04LTS\home\new\leaf\data\femnist\data
+        target: /data
   db:
+    container_name: db
     restart: always
-    image: mongo
+    image: mongo:latest
     networks:
       - default
     ports:
-      - "27019:27017"
+      - 27017:27017
 
 networks:
   default:
