Somewhat working thesis-leukemia

--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:3.8.3-slim-buster
 WORKDIR /code
 COPY requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip3 install pydot
+
+RUN pip3 install --upgrade pip
+RUN pip3 install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip3 install python-multipart
+RUN pip3 install pillow
 COPY . /code/application
 ENV PYTHONPATH "${PYTHONPATH}:/code/application"
 
