--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,21 @@ version: '3'
 services:
   local_operations:
     environment:
-      - USER_INDEX=1
+      - USER_INDEX=3
     restart: always
-    container_name: local_operations
     build: application
     networks:
       - default
     ports:
-      - "9050:9050"
-    depends_on:
-      - db
+      - '9053:9050'
+    #volumes:
+    #  - type: bind
+    #    source: \\wsl.localhost\Ubuntu20.04LTS\home\new\leaf\data\femnist\data
+    #    target: /data
     volumes:
       - type: bind
-        source: \\wsl.localhost\Ubuntu20.04LTS\home\new\leaf\data\femnist\data
+        source: /mnt/c/Users/kboga/PycharmProjects/localOperationsBeta/data
         target: /data
-  db:
-    container_name: db
-    restart: always
-    image: mongo:latest
-    networks:
-      - default
-    ports:
-      - 27017:27017
 
 networks:
   default:
