--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.8.3-slim-buster
 WORKDIR /code
 COPY requirements.txt /code/requirements.txt
+RUN apt-get update && apt-get -y install iproute2
+RUN ln -s /usr/lib/tc /lib/tc
 RUN pip3 install pydot
 
 RUN pip3 install --upgrade pip
