base for experiments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   local_operations:
     environment:
-      - USER_INDEX=0
+      - USER_INDEX=3
       - GROUP_INDEX=1
     restart: always
     build: application
@@ -10,15 +10,15 @@ services:
       - default
     ports:
       - '905${USER_INDEX}:9050'
-      - '8081:8081'
+      #- '8082:8082'
     #volumes:
     #  - type: bind
     #    source: \\wsl.localhost\Ubuntu20.04LTS\home\new\leaf\data\femnist\data
     #    target: /data
     volumes:
       - type: bind
-        source: /Users/karolinabogacka/PycharmProjects/fl-local-operations/data
-        target: /data
+        source: /Users/karolinabogacka/PycharmProjects/fl-local-operations/cifar-10-batches-py
+        target: /cifar-10-batches-py
 
 networks:
   default:
