First version of STAR-rings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     environment:
       - USER_INDEX=${USER_INDEX}
       - TO_CONNECT=${TO_CONNECT_INDEX}
+      - GROUP_SIZE=${GROUP_SIZE}
     restart: always
     build: application
     networks:
