--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   local_operations:
     environment:
-      - USER_INDEX=4
+      - USER_INDEX=1
     restart: always
     build: application
     networks:
@@ -15,7 +15,7 @@ services:
     #    target: /data
     volumes:
       - type: bind
-        source: /home/wasielk/federated-experiments/fl-local-operations/cifar-10-batches-py
+        source: ./cifar-10-batches-py
         target: /cifar-10-batches-py
 
 networks:
