--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   local_operations:
     environment:
-      - USER_INDEX=0
+      - USER_INDEX=7
     restart: always
     build: application
     networks:
@@ -15,8 +15,8 @@ services:
     #    target: /data
     volumes:
       - type: bind
-        source: /Users/karolinabogacka/PycharmProjects/fl-local-operations/data
-        target: /data
+        source: ./cifar-10-batches-py
+        target: /cifar-10-batches-py
 
 networks:
   default:
